[gd_scene load_steps=2 format=3 uid="uid://bjouqewaembxu"]

[ext_resource type="Script" path="res://scenes/ui/settings_pannel/settings_pannel.gd" id="1_76o4j"]

[node name="SettingsPannel" type="PanelContainer"]
custom_minimum_size = Vector2(500, 0)
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -250.0
offset_top = -83.5
offset_right = 250.0
offset_bottom = 83.5
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_76o4j")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 2
theme_override_constants/margin_left = 16
theme_override_constants/margin_top = 16
theme_override_constants/margin_right = 16
theme_override_constants/margin_bottom = 16

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2

[node name="MusicVolumeSetting" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer/MusicVolumeSetting"]
layout_mode = 2
text = "Music:"

[node name="MusicVolumeSlider" type="HSlider" parent="MarginContainer/VBoxContainer/MusicVolumeSetting"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 1
min_value = -60.0
max_value = 20.0

[node name="SFXVolumeSetting" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer/SFXVolumeSetting"]
layout_mode = 2
text = "SFX:  "

[node name="SFXVolumeSlider" type="HSlider" parent="MarginContainer/VBoxContainer/SFXVolumeSetting"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 1
min_value = -60.0
max_value = 20.0

[node name="FullscreenButton" type="CheckButton" parent="MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Fullscreen"

[node name="Accept" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Accept"

[connection signal="value_changed" from="MarginContainer/VBoxContainer/MusicVolumeSetting/MusicVolumeSlider" to="." method="_on_music_volume_slider_value_changed"]
[connection signal="value_changed" from="MarginContainer/VBoxContainer/SFXVolumeSetting/SFXVolumeSlider" to="." method="_on_sfx_volume_slider_value_changed"]
[connection signal="toggled" from="MarginContainer/VBoxContainer/FullscreenButton" to="." method="_on_fullscreen_button_toggled"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/Accept" to="." method="_on_accept_pressed"]
